--- a/styles.css
+++ b/styles.css
@@ -101,3 +101,24 @@ nav a {
   transition: all 0.2s;
   text-transform: uppercase;
 }
+
+.footer {
+  background-color: #fffefe;
+  color: rgb(52, 52, 52);
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  margin-top: 3.2rem;
+}
+
+.footer p {
+  font-size: small;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.footer a {
+  text-decoration: none;
+  color: rgb(31, 142, 144);
+}
